2007-05-09  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (gconf_peditor_new),
	(gconf_peditor_new_boolean), (gconf_peditor_new_integer_valist),
	(gconf_peditor_new_integer), (gconf_peditor_new_string_valist),
	(gconf_peditor_new_string), (gconf_peditor_new_filename),
	(gconf_peditor_new_color), (gconf_peditor_new_select_menu),
	(gconf_peditor_new_select_menu_with_enum),
	(gconf_peditor_new_combo_box),
	(gconf_peditor_new_combo_box_with_enum),
	(gconf_peditor_new_select_radio),
	(gconf_peditor_new_numeric_range), (gconf_peditor_new_font),
	(gconf_peditor_new_enum_toggle), (gconf_peditor_new_image),
	(gconf_peditor_new_select_radio_with_enum):
	* gconf-property-editor.h: constify a number of function arguments

2007-05-08  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_set_gconf_value),
	(peditor_combo_box_widget_changed):
	add support for unsetting GConf values if the conversion handlers return
	null, and use it for the combo box editor

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_combo_box_value_changed),
	(peditor_combo_box_widget_changed), (gconf_peditor_new_combo_box),
	(gconf_peditor_new_combo_box_with_enum):
	* gconf-property-editor.h: add GConfPropertyEditor support for GtkComboBox

2007-03-04  Thomas Wood  <thos@gnome.org>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme): Don't try and open null
	filenames
	* theme-thumbnail.c: (message_from_capplet): Reset the gtk_color_scheme after
	a thumbnail has been generated.

2007-03-04  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gtkrc-utils.c: (gtkrc_get_details):
	* gtkrc-utils.h:
	Move gtkrc-utils from theme-switcher to here.

	* gnome-theme-info.c: (gnome_theme_read_meta_theme): Search the gtkrc for
	the colour scheme if none was found in the metatheme file. Fixes a problem
	when comparing two metathemes which only differ by the colour scheme setting.

2007-02-28  Thomas Wood  <thos@gnome.org>
