@@ -13,6 +13,7 @@ main (int argc, char *argv[])
   gboolean monitor_not_added = FALSE;
   GList *themes, *list;
 
+  g_thread_init (NULL);
   gtk_init (&argc, &argv);
   gnome_vfs_init ();
   gnome_theme_init (&monitor_not_added);
